Fixes to routing of orthagonal edges

--- a/src/modules/components/Canvas.css
+++ b/src/modules/components/Canvas.css
@@ -77,10 +77,8 @@ svg {
   left:20px;
 }
 
-.junction {
-  pointer-events:none;
-}
-.junction:hover, .junction-shadow:hover {
+.junction:hover, 
+.junction-shadow:hover {
   border-color: blueviolet;
   cursor:grab;
 }
