Add edge end anchor move

--- a/src/modules/components/Canvas.css
+++ b/src/modules/components/Canvas.css
@@ -71,6 +71,11 @@ svg {
   /* border: solid 1px red; */
 }
 
+.no-display {
+  /* display:none; */
+  pointer-events: none;
+}
+
 .debug-data {
   position:absolute;
   top:50px;
